syntax = "proto3";

option csharp_namespace = "Envoy.Service.Auth.V3";

import "google/protobuf/wrappers.proto";
import "google/rpc/status.proto";

package envoy.service.auth.v3;

service Authorization {
  rpc Check(CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  AttributeContext attributes = 1;
}

message CheckResponse {
  google.rpc.Status status = 1;

  oneof http_response {
    OkHttpResponse ok_response = 2;
  }
}

message OkHttpResponse {
  // A list of headers to be added to the upstream request.
  repeated HeaderValueOption headers = 2;
}

message HeaderValueOption {
  HeaderValue header = 1;
  google.protobuf.BoolValue append = 2;
}

message HeaderValue {
  string key = 1;
  string value = 2;
}

message AttributeContext {
  message Request {
    message Http {
      // All the request headers.
      map<string, string> headers = 3;
    }
    Http http = 4;
  }
  Request request = 2;
}
